# tiddly-wiki-server

./: CPL-Repo.json  Cargo.toml  Dockerfile  README.md  README_CN.md  config.toml  empty.html  epub_viewer_plugin.json  s3_uploader_plugin.json
epub_plugin/: manifest.json
epub_plugin/tiddlers/: config_url.tid  filter.tid  template.tid
s3_uploader/: manifest.json  s3-uploader.js  ui-modal.html
src/: init.sql  main.rs
tools/: plugin_packer.rs
web/: README.md
web/foliate-js/: package.json  reader.html  vite.config.js
web/foliate-js/ebook_reader/: reader.html
web/foliate-js/ebook_reader/assets/: comic-book-nSTUk5ZP.js  epub-FpEZHuK7.js  fixed-layout-D4c9WMmo.js  main-D7JBQFLH.js  mobi-W5IBhVYb.js  paginator-Ck4QNDHj.js  search-UHG1SVDO.js  tts-ColYPQ7G.js  zip-DR1K4mUw.js
